# opencv-image-classification

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
